# rust-embedded-micro-bit

./: .gitignore  Cargo.toml  Embed.toml  README.md
src/: main.rs
