[package]
name = "rust-embedded-micro-bit"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version =  "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }
microbit-v2 = {version = "0.12", optional = true}
microbit = {version = "0.12", optional = true}


[features]
v2 = ["microbit-v2"]
v1 = ["microbit"]

